# 4000DB-NeuralAmp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Neural-ReelSaturator.jucer  NeuralAmp.jucer  README.md  data_preprocessing.py  requirements.txt
Model/: data_processing.py  lstm_model_test.ipynb  model.py  train.py
Models/: CMakeLists.txt  RNN3-4000DB-Parameterized.json
Resources/: Parameterization-Config.json  model.json
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RTNN.cpp  RTNN.h  TransparentLookAndFeel.cpp  TransparentLookAndFeel.h
